Docs: Fixed layout issues (menu & Edge)

--- a/Docs/static/css/custom.css
+++ b/Docs/static/css/custom.css
@@ -8,6 +8,21 @@ a {
 	font-weight: 400;
 }
 
+@media (min-height: 700px) {
+	.donateButton {
+		text-align: center;
+	}
+}
+
+.donateButton {
+	width:100%;
+	margin-bottom: 10px;
+}
+	
+#footer {
+	padding: 10px 15px 0 15px;
+}
+
 #search-by {
 	color: #fff !important;
 }
@@ -40,10 +55,16 @@ nav#TableOfContents {
 	left: -10px;
 }
 
+nav > ul > li:only-child,
+nav > ul > li:only-child > ul > li:only-child,
+nav > ul > li:only-child > ul > li:only-child > ul > li:only-child {
+	display: inline;
+}
+
 ul > li > ul:only-child { 
 	position: relative;
 	left: -40px;
-	background-color: #FCFCFC;
+	background-color: #FCFCFC;	
 }
 
 .progress ul > li > ul:only-child {
@@ -193,5 +214,95 @@ section#shortcuts > h3 {
 	
 	.imgBox.right > div {
 		display: inline-block;
+	}
+}
+
+.bmc-button img{
+	width: 27px !important;
+	margin-bottom: 1px !important;
+	box-shadow: none !important;
+	border: none !important;
+	vertical-align: middle !important;
+}
+
+.bmc-button{
+	line-height: 36px !important;
+	height:37px !important;
+	text-decoration: none !important;
+	display:inline-flex !important;
+	color:#000000 !important;
+	background-color:#FFDD00 !important;
+	border-radius: 3px !important;
+	border: 1px solid transparent !important;
+	padding: 0px 9px !important;
+	font-size: 17px !important;
+	letter-spacing:-0.08px !important;
+	box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;
+	-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;
+	margin: 0 auto !important;
+	-webkit-box-sizing: border-box !important;
+	box-sizing: border-box !important;
+	-o-transition: 0.3s all linear !important;
+	-webkit-transition: 0.3s all linear !important;
+	-moz-transition: 0.3s all linear !important;
+	-ms-transition: 0.3s all linear !important;
+	transition: 0.3s all linear !important;
+}
+	
+.bmc-button:hover, .bmc-button:active, .bmc-button:focus {
+	-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;
+	text-decoration: none !important;
+	box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;
+	opacity: 0.85 !important;
+	color:#000000 !important;
+}
+
+@media (max-height: 700px) {
+	.bmc-button{
+		line-height: 22px !important;
+		height:25px !important;
+		padding: 0 4px 0 0 !important;
+	}
+}
+
+nav#sidebar > div.highlightable {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+}
+
+nav#sidebar > div.highlightable > ul.topics {
+	flex: 0 0 auto;
+}
+
+nav#sidebar > div.highlightable > section#shortcuts {
+	flex: 0 0 auto;
+}
+
+nav#sidebar > div.highlightable > section#footer {
+	flex: 0 0 auto;
+}
+
+div#menuspacer {
+	flex: 1 0 auto;
+}
+
+nav#sidebar {
+	display: flex;
+	flex-direction: column;
+}
+
+div#header-wrapper {
+	flex: 0 0 auto;
+}
+
+nav#sidebar > div.highlightable {
+	flex: 1 0 auto;
+}
+
+@supports (-ms-ime-align: auto) {
+	nav#sidebar,
+	section#body {
+		transition: none;
 	}
 }
